[project]
name = "cryptocrawler"
version = "0.1.0"
description = "Live Bitcoin price poller with simple moving average and retry logic"
authors = [
    {name = "max",email = "maksim.bahovsky@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
