[project]
name = "cryptocrawler"
version = "0.1.0"
description = ""
authors = [
    {name = "max",email = "maksim.bahovsky@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "aiohttp (>=3.11.18,<4.0.0)",
    "aioresponses (>=0.7.8,<0.8.0)",
    "pytest (>=8.3.5,<9.0.0)",
    "pytest-asyncio (>=0.26.0,<0.27.0)",
    "logging (>=0.4.9.6,<0.5.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
aioresponses = "^0.7.8"

